// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AcIntegrationTab should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname="mock-css."
      >
        When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
         
        <a>
          see here.
        </a>
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only. You can also select the default height and width of the window you wish your app to launch in within AgencyCloud.
      </mock-styled.p>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              AgencyCloud Integration
            </mock-styled.label>
            <mock-styled.input
              id="app-edit-is-ac-inegrated"
              type="checkbox"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="app-edit-is-ac-inegrated"
            >
              <mock-styled.span>
                Yes
              </mock-styled.span>
              <mock-styled.span>
                No
              </mock-styled.span>
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="desktopIntegrationTypeIds"
              label="Integration Type"
              name="desktopIntegrationTypeIds"
              placeholder="Please select"
            />
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css.
  margin-left: 0.375rem;
 mock-css.
  font-size: 2.5rem;
"
              >
                <svg />
              </mock-styled.span>
              <p>
                Please select from the options below
              </p>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="test-static-id"
              >
                MOCK_NAME
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.p>
            An Error
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              disabled="true"
              id="test-static-id"
              name="launchWindowSizeX"
              placeholder="Width of window your app will be launched in AgencyCloud"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Default App Window Width
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              disabled="true"
              id="test-static-id"
              name="launchWindowSizeY"
              placeholder="Height of window your app will be launched in AgencyCloud"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Default App Window Height
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname="mock-css."
    >
      When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
       
      <a>
        see here.
      </a>
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only. You can also select the default height and width of the window you wish your app to launch in within AgencyCloud.
    </mock-styled.p>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            AgencyCloud Integration
          </mock-styled.label>
          <mock-styled.input
            id="app-edit-is-ac-inegrated"
            type="checkbox"
          />
          <mock-styled.label
            classname="mock-css."
            htmlfor="app-edit-is-ac-inegrated"
          >
            <mock-styled.span>
              Yes
            </mock-styled.span>
            <mock-styled.span>
              No
            </mock-styled.span>
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            id="desktopIntegrationTypeIds"
            label="Integration Type"
            name="desktopIntegrationTypeIds"
            placeholder="Please select"
          />
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="mock-css.
  margin-left: 0.375rem;
 mock-css.
  font-size: 2.5rem;
"
            >
              <svg />
            </mock-styled.span>
            <p>
              Please select from the options below
            </p>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.input
              id="test-static-id"
              type="checkbox"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="test-static-id"
            >
              MOCK_NAME
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.p>
          An Error
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            disabled="true"
            id="test-static-id"
            name="launchWindowSizeX"
            placeholder="Width of window your app will be launched in AgencyCloud"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Default App Window Width
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            disabled="true"
            id="test-static-id"
            name="launchWindowSizeY"
            placeholder="Height of window your app will be launched in AgencyCloud"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Default App Window Height
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AcIntegrationTab should match a snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname="mock-css."
      >
        When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
         
        <a>
          see here.
        </a>
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only. You can also select the default height and width of the window you wish your app to launch in within AgencyCloud.
      </mock-styled.p>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              AgencyCloud Integration
            </mock-styled.label>
            <mock-styled.input
              id="app-edit-is-ac-inegrated"
              type="checkbox"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="app-edit-is-ac-inegrated"
            >
              <mock-styled.span>
                Yes
              </mock-styled.span>
              <mock-styled.span>
                No
              </mock-styled.span>
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              disabled="true"
              id="test-static-id"
              name="launchWindowSizeX"
              placeholder="Width of window your app will be launched in AgencyCloud"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Default App Window Width
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              disabled="true"
              id="test-static-id"
              name="launchWindowSizeY"
              placeholder="Height of window your app will be launched in AgencyCloud"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Default App Window Height
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname="mock-css."
    >
      When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
       
      <a>
        see here.
      </a>
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only. You can also select the default height and width of the window you wish your app to launch in within AgencyCloud.
    </mock-styled.p>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            AgencyCloud Integration
          </mock-styled.label>
          <mock-styled.input
            id="app-edit-is-ac-inegrated"
            type="checkbox"
          />
          <mock-styled.label
            classname="mock-css."
            htmlfor="app-edit-is-ac-inegrated"
          >
            <mock-styled.span>
              Yes
            </mock-styled.span>
            <mock-styled.span>
              No
            </mock-styled.span>
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            disabled="true"
            id="test-static-id"
            name="launchWindowSizeX"
            placeholder="Width of window your app will be launched in AgencyCloud"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Default App Window Width
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            disabled="true"
            id="test-static-id"
            name="launchWindowSizeY"
            placeholder="Height of window your app will be launched in AgencyCloud"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Default App Window Height
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AcIntegrationTab should match a snapshot with no errors and empty types 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname="mock-css."
      >
        When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
         
        <a>
          see here.
        </a>
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only. You can also select the default height and width of the window you wish your app to launch in within AgencyCloud.
      </mock-styled.p>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              AgencyCloud Integration
            </mock-styled.label>
            <mock-styled.input
              id="app-edit-is-ac-inegrated"
              type="checkbox"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="app-edit-is-ac-inegrated"
            >
              <mock-styled.span>
                Yes
              </mock-styled.span>
              <mock-styled.span>
                No
              </mock-styled.span>
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="desktopIntegrationTypeIds"
              label="Integration Type"
              name="desktopIntegrationTypeIds"
              placeholder="Please select"
            />
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css.
  margin-left: 0.375rem;
 mock-css.
  font-size: 2.5rem;
"
              >
                <svg />
              </mock-styled.span>
              <p>
                Please select from the options below
              </p>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              disabled="true"
              id="test-static-id"
              name="launchWindowSizeX"
              placeholder="Width of window your app will be launched in AgencyCloud"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Default App Window Width
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              disabled="true"
              id="test-static-id"
              name="launchWindowSizeY"
              placeholder="Height of window your app will be launched in AgencyCloud"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Default App Window Height
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname="mock-css."
    >
      When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
       
      <a>
        see here.
      </a>
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only. You can also select the default height and width of the window you wish your app to launch in within AgencyCloud.
    </mock-styled.p>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            AgencyCloud Integration
          </mock-styled.label>
          <mock-styled.input
            id="app-edit-is-ac-inegrated"
            type="checkbox"
          />
          <mock-styled.label
            classname="mock-css."
            htmlfor="app-edit-is-ac-inegrated"
          >
            <mock-styled.span>
              Yes
            </mock-styled.span>
            <mock-styled.span>
              No
            </mock-styled.span>
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            id="desktopIntegrationTypeIds"
            label="Integration Type"
            name="desktopIntegrationTypeIds"
            placeholder="Please select"
          />
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="mock-css.
  margin-left: 0.375rem;
 mock-css.
  font-size: 2.5rem;
"
            >
              <svg />
            </mock-styled.span>
            <p>
              Please select from the options below
            </p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            disabled="true"
            id="test-static-id"
            name="launchWindowSizeX"
            placeholder="Width of window your app will be launched in AgencyCloud"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Default App Window Width
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            disabled="true"
            id="test-static-id"
            name="launchWindowSizeY"
            placeholder="Height of window your app will be launched in AgencyCloud"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Default App Window Height
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
